<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_pkg</name>
  <version>0.1.0</version>
  <description>Navigation stack with SLAM, Nav2, and obstacle avoidance</description>
  <maintainer email="team@safety-rover.local">Safety Rover Team</maintainer>
  <license>MIT</license>

  <author email="person.b@team.local">Person B</author>

  <!-- ROS2 Jazzy dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake_python</build_type>
  </export>
</package>
